--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,10 @@
 	"type" : "package",
 	"require" : {
 		"php" : ">=7.0",
-		"illuminate/console" : "5.3.* || 5.4.* || 5.5.*",
-		"illuminate/database" : "5.3.* || 5.4.* || 5.5.*",
-		"illuminate/filesystem" : "5.3.* || 5.4.* || 5.5.*",
+		"illuminate/console" : "5.3.* || 5.4.* || 5.5.* || 5.6.*",
+		"illuminate/database" : "5.3.* || 5.4.* || 5.5.* || 5.6.*",
+		"illuminate/filesystem" : "5.3.* || 5.4.* || 5.5.* || 5.6.*",
+		"illuminate/auth": "5.3.* || 5.4.* || 5.5.* || 5.6.*",
 		"predis/predis" : "^1.0"
 	},
 	"require-dev" : {
